fix: wrap post titles

--- a/nodebb-theme-fdk/less/posts.less
+++ b/nodebb-theme-fdk/less/posts.less
@@ -16,6 +16,7 @@
       .topic-title {
         line-height: inherit;
         font-size: inherit;
+        word-break: break-all;
       }
     }
 
